# TikTok-Lyric-Video-Pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  run_pipeline.py  vercel.json
.github/workflows/: ci.yml
apps/api-nest/: .env.example  README.md  package.json
apps/smoke-ui/: index.html
apps/web/: .env.example  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.js
config/: pipeline.example.json  pipeline.render.json
data/provider_feeds/: lyrics_feed.example.json  spotify_trending.example.json  tiktok_trending.example.json
deploy/linux/: Caddyfile  README.md  backend.env.example  tiktok-lyric-platform.service
docker/: platform.Dockerfile
docs/: ARCHITECTURE.md  STATSFM_APPLICATION_PACKAGE.md
migrations/: env.py
migrations/versions/: 0001_initial_platform_schema.py  0002_postgres_search_indexes.py
screens & code/admin_panel/: code.html
screens & code/clip_browser_screen/: code.html
screens & code/configuration_screen/: code.html
screens & code/song_intake/: code.html
scripts/: dev-no-docker.ps1
src/tiktok_lyric_pipeline/: __init__.py  cli.py  config.py  hooks.py  models.py  pipeline.py  utils.py
src/tiktok_platform/: __init__.py  db.py  models.py  render_entrypoint.py  search.py  security.py  services.py  settings.py  tiktok_api.py  token_crypto.py
src/tiktok_platform_api/: __init__.py  app.py  dependencies.py
tests/: conftest.py  test_platform_api_smoke.py  test_platform_security.py  test_platform_worker.py
(+54 files in other folders)
